# schematic_mapper

./: .gitignore  CONTRIBUTING.MD  LICENSE  README.md
backend/: .env.template  env.yml  main.py  manage.py  mypy.ini  pyproject.toml
backend/api/: ad_utils.py  admin.py  apps.py  asset_adapter.py  cache.py  constants.py  middleware.py  models.py  permissions.py  search_config_service.py  search_index_service.py  search_service.py  serializers.py  urls.py  views.py
backend/api/adapters/: __init__.py  asset_adapter.py
backend/api/management/commands/: cleanup_uploads.py  refresh_search_projection.py  seed_phase3.py  seed_test_data.py  setup_mock_asset_db.py
backend/api/migrations/: 0001_initial.py  0002_add_image_upload_and_chunks.py  0003_add_search_indexes.py  0004_imageupload_uploader_identity.py  0005_add_image_thumbnail.py  0006_add_fp_image_id_index.py  0007_image_component_name_normalized_unique.py  0008_fitting_position_size_fields.py
backend/api/serializers/: __init__.py  image_serializers.py  search_serializers.py  upload_serializers.py
backend/api/services/: image_service.py  search_config_service.py  search_index_service.py  search_service.py  upload_service.py
backend/api/views/: __init__.py  admin.py  health.py  images.py  search.py  user.py
backend/config/: asgi.py  log_filters.py  settings.py  urls.py  wsgi.py
backend/scripts/: mock_asset_db.sql
backend/tests/: conftest.py
backend/tests/api/: test_ad_utils.py  test_asset_adapter.py  test_auth_middleware.py  test_cleanup_uploads.py  test_models.py  test_search_service.py  test_serializers.py  test_user_endpoint.py  test_views.py
backend/tests/config/: test_logging.py
docs/: deployment.md  django_vs_fastapi.md  plan.md  postgres_docker.md  spec.md
frontend/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  devModeAuth.test.tsx  main.test.tsx  main.tsx  theme.ts
frontend/src/components/: POITooltipCard.test.tsx  POITooltipCard.tsx  TopAppHeader.tsx  ViewerFooterStatusBar.test.tsx  ViewerFooterStatusBar.tsx
frontend/src/context/: AuthProvider.test.tsx  AuthProvider.tsx
frontend/src/pages/: AdminPage.test.tsx  AdminPage.tsx  AdminUploadMappingPage.test.tsx  AdminUploadMappingPage.tsx  ImageSelectionPage.test.tsx  ImageSelectionPage.tsx  ImageViewerPage.test.tsx  ImageViewerPage.tsx
frontend/src/routes/: ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/test/: fixtures.ts  handlers.ts  setup.ts
(+101 files in other folders)
