[project]
name = "backend"
version = "0.1.0"
description = "Django REST Framework backend for the schematic mapper application"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "djangorestframework-stubs>=3.16.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.5",
]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "environ"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
